Record color profile and metadata in undo history in editor.

So far only the history was recorded. Add a container to store history and icc profile.
Undo/redo now works cleanly when a plugin changes the color profile.
DMetadata is currently not kept in undo because either an imageplugin (only two atm, noncritical)
or a concurrent user metadata editing operation can change the metadata; essentially,
all critical metadata editing would need to be applied before saving.
In ImageWindow, we re-write from the database to metadata before saving, so probably all will work.

BUG: 303163